[package]
name = "docker_duplicate_files"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
flate2 = "1.1.5"
humansize = "2.1.3"
itertools = "0.14.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tar = "0.4.44"
tempdir = "0.3.7"
tempfile = "3.23.0"
walkdir = "2.5.0"
